Layout issue 1

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -3018,9 +3018,7 @@ i.google-ride {
 .newDashCardWrp {
     display: flex; flex-direction: column; align-items: center; justify-content:space-between; height: 30%; border-radius: 9px; border: 1px solid rgba(0, 0, 0, 0.1); box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25); padding-top: 2em; padding-bottom: 2em;
 }
-#homeMainWrp {
-    padding-right: 10em;
-}
+
 #homeMainWrp  .newDashCardWrp:nth-child(2) {
     margin-left: 1em;
     margin-right: 1em;
